replace files in remote repo

--- a/greek.html
+++ b/greek.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Sun Jan 31 2016 13:44:26 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Feb 01 2016 18:08:42 GMT+0000 (UTC) -->
 <html data-wf-site="56a100172f2ef2655bb9311b" data-wf-page="56aa790d6b6bb35e056756b8">
 <head>
   <meta charset="utf-8">
@@ -20,8 +20,8 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico">
-  <link rel="apple-touch-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png">
+  <link rel="shortcut icon" type="image/x-icon" href="images/1454368797_code_brackets.png">
+  <link rel="apple-touch-icon" href="images/1454368875_developer-api-coding-screen.png">
 </head>
 <body class="w-clearfix body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav">
@@ -48,8 +48,8 @@
       </video>
     </div>
     <div class="w-row row">
-      <div class="w-col w-col-6 w-col-stack topcolumn1"></div>
-      <div class="w-col w-col-6 w-col-stack columnwithtitle">
+      <div class="w-col w-col-2 w-col-stack topcolumn1"></div>
+      <div class="w-col w-col-10 w-col-stack w-clearfix columnwithtitle">
         <h1 class="topheadingpersonalmessage phone">Γειά, με λένε <span class="namespan">Ανδρόνικο</span> και είμαι ένας αυτοδίδακτος <span class="developerspan">web developer &nbsp;</span>που δημιουργεί <span style="letter-spacing: -1px; line-height: 32px;" class="freelancespan"><strong class="projectspan">websites </strong></span>και μαθαίνει διαρκώς καινούργια πράγματα.&nbsp;</h1>
       </div>
     </div>
@@ -146,6 +146,8 @@
               </div>
               <div class="w-slide slider1"><img width="200" src="images/jQurery.gif" class="skillsimg">
               </div>
+              <div class="w-slide slider1"><img width="400" src="images/bootstrap.png" class="skillsimg">
+              </div>
               <div class="w-slide slider1"><img width="268" src="images/Git-logo.svg.png" class="skillsimg git land">
               </div>
               <div class="w-slide slider1"><img width="280" src="images/GitHub_logo_2013_padded.svg.png" class="skillsimg github landscape">
@@ -154,11 +156,11 @@
               </div>
               <div class="w-slide slider1"><img width="287" src="images/5606c245e67c4a89489dcb8b_webflow--blue.svg" class="skillsimg webflow land">
               </div>
-              <div class="w-slide slider1"><img width="213" src="images/1000px-The_GIMP_icon_-_gnome.svg.png" class="skillsimg gimp land">
+              <div class="w-slide slider1"><img width="213" src="images/1000px-The_GIMP_icon_-_gnome.svg_1.png" class="skillsimg gimp land">
               </div>
               <div class="w-slide slider1"><img width="350" src="images/logo-ubuntu_st_no®-black-hex.png" class="skillsimg ubuntu lans">
               </div>
-              <div class="w-slide slider1"><img width="301" src="images/ChromeDev.png" class="skillsimg chrome land">
+              <div class="w-slide slider1"><img width="301" src="images/ChromeDev_1.png" class="skillsimg chrome land">
               </div>
             </div>
             <div class="w-slider-arrow-left leftarrow">
@@ -174,11 +176,13 @@
     </div>
   </div>
   <div class="w-section moocssection">
-    <div class="w-clearfix moocsdiv"><img width="216" src="images/overview-of-creating-an-edx-course_378x225.jpg" class="moocimg"><img src="images/614637_orig.png" class="moocimg"><img src="images/3858294280cc40bea2a0230cc861e7f9.png" class="moocimg">
+    <div class="w-clearfix moocsdiv"><img width="216" src="images/overview-of-creating-an-edx-course_378x225.jpg" class="moocimg"><img src="images/614637_orig_1.png" class="moocimg"><img src="images/unnamed.png" class="moocimg">
       <div class="overlaydiv mooc"></div>
     </div>
   </div>
   <div id="footer" class="w-section footer"><a href="mailto:contact@nikches.com" class="mailheader">contact@nikches.com</a>
+    <div class="atributes"><span class="atr">Shape graphic by Catalin Fertu and Tool graphic by Freepik from Flaticon are licensed under CC BY 3.0. Made with Logo Maker<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="keyboardatribute">Icon made by Freepik from www.flaticon.com is licensed under CC BY 3.0</span>
+    </div>
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
