--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Sun Jan 31 2016 13:44:26 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Feb 01 2016 18:08:42 GMT+0000 (UTC) -->
 <html data-wf-site="56a100172f2ef2655bb9311b" data-wf-page="56a100172f2ef2655bb9311c">
 <head>
   <meta charset="utf-8">
@@ -19,8 +19,8 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/web-programming.svg">
-  <link rel="apple-touch-icon" href="images/web-programming.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="images/1454368797_code_brackets.png">
+  <link rel="apple-touch-icon" href="images/1454368875_developer-api-coding-screen.png">
 </head>
 <body class="w-clearfix body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav">
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="w-section navsec">
-    <a href="#topSection" class="w-inline-block logolinkblock"><img width="156" src="images/1.png" class="logoimg">
+    <a href="#topSection" class="w-inline-block logolinkblock"><img width="156" src="images/1_1.png" class="logoimg">
     </a>
     <div class="w-container navcon"><a href="#workSec" data-ix="navtrigger-4" class="navbarlink contact work">My work</a><a href="#contactSSec" data-ix="navtrigger-5" class="navbarlink contact con">Contact</a><a href="#education" data-ix="navtrigger-6" class="navbarlink contact tools">Skills &amp; tools</a>
     </div>
@@ -47,8 +47,8 @@
       </video>
     </div>
     <div class="w-row row">
-      <div class="w-col w-col-6 w-col-stack topcolumn1"></div>
-      <div class="w-col w-col-6 w-col-stack w-clearfix columnwithtitle">
+      <div class="w-col w-col-2 w-col-stack topcolumn1"></div>
+      <div class="w-col w-col-10 w-col-stack w-clearfix columnwithtitle">
         <h1 class="topheadingpersonalmessage phone home">Hi, my name is <span class="freelancespan">Nik </span>and i am a self taught&nbsp;<span class="developerspan">web developer </span>who loves building websites and learning new things. I'm available for&nbsp;<span class="freelancespan">freelance</span>&nbsp;work.</h1>
       </div>
     </div>
@@ -61,19 +61,19 @@
         </div>
         <div class="w-col w-col-7 imagescolumn">
           <a href="http://nik-ches.github.io/freelancer/" target="_blank" class="w-inline-block linkblock">
-            <div class="imagediv"><img src="images/Selection_003.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
+            <div class="imagediv"><img src="images/Selection_4.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
             </div>
           </a>
           <a href="https://nik-ches.github.io/climatenow" target="_blank" class="w-inline-block linkblock">
-            <div class="imagediv"><img src="images/climatenow.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
+            <div class="imagediv"><img src="images/climatenow_1.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
             </div>
           </a>
           <a href="http://nik-ches.github.io/logo/" target="_blank" class="w-inline-block linkblock">
-            <div class="imagediv"><img src="images/Selection_004.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
+            <div class="imagediv"><img src="images/Selection_5.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
             </div>
           </a>
           <a href="http://film-blog.webflow.io/" target="_blank" class="w-inline-block linkblock">
-            <div class="imagediv"><img src="images/Selection_005.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
+            <div class="imagediv"><img src="images/Selection_6.png" data-ix="zoomonhover" class="w-preserve-3d sampleimage link">
             </div>
           </a>
         </div>
@@ -141,17 +141,17 @@
         <div class="w-col w-col-6 workcol2">
           <div data-animation="outin" data-duration="1500" data-hide-arrows="1" data-infinite="1" data-delay="0" data-autoplay="1" data-easing="linear" class="w-slider slider">
             <div class="w-slider-mask">
-              <div class="w-slide slider1"><img width="211" src="images/HTML5_logo_and_wordmark.svg" class="skillsimg">
+              <div class="w-slide slider1"><img width="211" src="images/HTML5_logo_and_wordmark_1.svg" class="skillsimg">
               </div>
-              <div class="w-slide slider1"><img width="149" src="images/css3.svg" class="skillsimg">
+              <div class="w-slide slider1"><img width="149" src="images/css3_1.svg" class="skillsimg">
               </div>
-              <div class="w-slide slider1"><img width="200" src="images/jQurery.gif" class="skillsimg">
+              <div class="w-slide slider1"><img width="200" src="images/jQurery_1.gif" class="skillsimg">
               </div>
-              <div class="w-slide slider1"><img width="268" src="images/Git-logo.svg.png" class="skillsimg git land">
+              <div class="w-slide slider1"><img width="268" src="images/Git-logo.svg_1.png" class="skillsimg git land">
               </div>
-              <div class="w-slide slider1"><img width="280" src="images/GitHub_logo_2013_padded.svg.png" class="skillsimg github landscape">
+              <div class="w-slide slider1"><img width="280" src="images/GitHub_logo_2013_padded.svg_1.png" class="skillsimg github landscape">
               </div>
-              <div class="w-slide slider1"><img width="290" src="images/Atom_icon.png" class="skillsimg atom land">
+              <div class="w-slide slider1"><img width="290" src="images/Atom_icon_1.png" class="skillsimg atom land">
               </div>
               <div class="w-slide slider1"><img width="287" src="images/5606c245e67c4a89489dcb8b_webflow--blue.svg" class="skillsimg webflow land">
               </div>
@@ -175,11 +175,13 @@
     </div>
   </div>
   <div class="w-section moocssection">
-    <div class="w-clearfix moocsdiv"><img width="216" src="images/overview-of-creating-an-edx-course_378x225.jpg" class="moocimg"><img src="images/614637_orig.png" class="moocimg"><img src="images/unnamed.png" class="moocimg">
+    <div class="w-clearfix moocsdiv"><img width="216" src="images/overview-of-creating-an-edx-course_378x225_1.jpg" class="moocimg"><img src="images/614637_orig.png" class="moocimg"><img src="images/unnamed.png" class="moocimg">
       <div class="overlaydiv mooc"></div>
     </div>
   </div>
   <div id="footer" class="w-section footer"><a href="mailto:contact@nikches.com" class="mailheader">contact@nikches.com</a>
+    <div class="atributes"><span class="atr">Shape graphic by Catalin Fertu and Tool graphic by Freepik from Flaticon are licensed under CC BY 3.0. Made with Logo Maker<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="keyboardatribute">Icon made by Freepik from www.flaticon.com is licensed under CC BY 3.0</span>
+    </div>
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
