fixed columns & added tab icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/1454368797_code_brackets.png">
+  <link rel="shortcut icon" type="image/x-icon" href="images/web-programming.svg">
   <link rel="apple-touch-icon" href="images/1454368875_developer-api-coding-screen.png">
 </head>
 <body class="w-clearfix body">
