replaced favicon & added skillsimg

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/web-programming.svg">
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+  <!--<link rel="shortcut icon" type="image/x-icon" href="images/web-programming.svg">
   <link rel="apple-touch-icon" href="images/1454368875_developer-api-coding-screen.png">
-</head>
+</head> -->
 <body class="w-clearfix body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav">
     <div class="w-container w-hidden-main w-hidden-medium w-hidden-small navbar">
@@ -146,7 +148,9 @@
               <div class="w-slide slider1"><img width="149" src="images/css3_1.svg" class="skillsimg">
               </div>
               <div class="w-slide slider1"><img width="200" src="images/jQurery_1.gif" class="skillsimg">
-              </div>
+                </div>
+                <div class="w-slide slider1"><img width="400" src="images/bootstrap.png" class="skillsimg bootstrap">
+                </div>
               <div class="w-slide slider1"><img width="268" src="images/Git-logo.svg_1.png" class="skillsimg git land">
               </div>
               <div class="w-slide slider1"><img width="280" src="images/GitHub_logo_2013_padded.svg_1.png" class="skillsimg github landscape">
