--- a/greek.html
+++ b/greek.html
@@ -20,8 +20,10 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/1454368797_code_brackets.png">
-  <link rel="apple-touch-icon" href="images/1454368875_developer-api-coding-screen.png">
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+  <!--<link rel="shortcut icon" type="image/x-icon" href="images/1454368797_code_brackets.png">
+  <link rel="apple-touch-icon" href="images/1454368875_developer-api-coding-screen.png"> -->
 </head>
 <body class="w-clearfix body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav">
