replaced ubuntu logo

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               </div>
               <div class="w-slide slider1"><img width="213" src="images/1000px-The_GIMP_icon_-_gnome.svg.png" class="skillsimg gimp land">
               </div>
-              <div class="w-slide slider1"><img width="350" src="images/logo-ubuntu_st_no®-black-hex.png" class="skillsimg ubuntu lans">
+              <div class="w-slide slider1"><img width="350" src="images/linux-logo-600x300.png" class="skillsimg ubuntu lans">
               </div>
               <div class="w-slide slider1"><img width="301" src="images/ChromeDev.png" class="skillsimg chrome land">
               </div>
