corected nav links in translated page & added skill

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Mon Feb 01 2016 18:08:42 GMT+0000 (UTC) -->
+<!-- Last Published: Thu Feb 04 2016 21:34:35 GMT+0000 (UTC) -->
 <html data-wf-site="56a100172f2ef2655bb9311b" data-wf-page="56a100172f2ef2655bb9311c">
 <head>
   <meta charset="utf-8">
@@ -19,11 +19,9 @@
     });
   </script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
-  <!--<link rel="shortcut icon" type="image/x-icon" href="images/web-programming.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="images/1454368797_code_brackets.png">
   <link rel="apple-touch-icon" href="images/1454368875_developer-api-coding-screen.png">
-</head> -->
+</head>
 <body class="w-clearfix body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-contain="1" class="w-nav">
     <div class="w-container w-hidden-main w-hidden-medium w-hidden-small navbar">
@@ -31,7 +29,7 @@
       </a>
       <nav role="navigation" class="w-nav-menu opennav"><a href="#workSec" data-ix="navtrigger" class="w-nav-link phonenavlink">My work</a><a href="#contactSec" data-ix="navtrigger-2" class="w-nav-link phonenavlink">Contact</a><a href="#education" data-ix="navtrigger-3" class="w-nav-link phonenavlink">Skill &amp; tools</a>
       </nav>
-      <div class="w-nav-button">
+      <div class="w-nav-button hamburger">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
@@ -45,7 +43,7 @@
   <div id="topSection" class="w-section topsectionvideo"><a href="greek.html" class="w-button greekbtn">Ελληνικά</a>
     <div class="w-embed video">
       <video muted="" autoplay="" loop="" style="width:100%; height:auto;  position:absolute; z-index: -1;">
-        <source src="http://dl.dropboxusercontent.com/s/96l3y45tz42vdh2/shutterstock_v12448643.mp4?dl=0" type="video/mp4">
+        <source src="http://dl.dropboxusercontent.com/s/s3g9th3mlxg8188/stock-footage-programmer-from-behind-and-programming-code-on-computer-monitor-programming-code-is-my-own.mp4?dl=0" type="video/mp4">
       </video>
     </div>
     <div class="w-row row">
@@ -137,7 +135,7 @@
   <div id="education" class="w-section educationsection">
     <div class="overlaydiv edu">
       <div class="w-row edurow">
-        <div class="w-col w-col-6 workcol1">
+        <div class="w-col w-col-6 w-clearfix workcol1">
           <h1 id="work" class="topheadingpersonalmessage work skills land home"><span class="outdent">...</span>i'm constantly learning new things and upgrading my work...</h1>
         </div>
         <div class="w-col w-col-6 workcol2">
@@ -148,9 +146,9 @@
               <div class="w-slide slider1"><img width="149" src="images/css3_1.svg" class="skillsimg">
               </div>
               <div class="w-slide slider1"><img width="200" src="images/jQurery_1.gif" class="skillsimg">
-                </div>
-                <div class="w-slide slider1"><img width="400" src="images/bootstrap.png" class="skillsimg bootstrap">
-                </div>
+              </div>
+              <div class="w-slide slider1"><img width="365" src="images/bootstrap.png" class="skillsimg">
+              </div>
               <div class="w-slide slider1"><img width="268" src="images/Git-logo.svg_1.png" class="skillsimg git land">
               </div>
               <div class="w-slide slider1"><img width="280" src="images/GitHub_logo_2013_padded.svg_1.png" class="skillsimg github landscape">
@@ -161,9 +159,11 @@
               </div>
               <div class="w-slide slider1"><img width="213" src="images/1000px-The_GIMP_icon_-_gnome.svg.png" class="skillsimg gimp land">
               </div>
-              <div class="w-slide slider1"><img width="350" src="images/linux-logo-600x300.png" class="skillsimg ubuntu lans">
+              <div class="w-slide slider1"><img width="365" src="images/trello-logo.png" class="skillsimg">
               </div>
-              <div class="w-slide slider1"><img width="301" src="images/ChromeDev.png" class="skillsimg chrome land">
+              <div class="w-slide slider1"><img width="300" src="images/linux-logo-600x300.png" class="skillsimg ubuntu lans">
+              </div>
+              <div class="w-slide slider1"><img width="287" src="images/ChromeDev.png" class="skillsimg chrome land">
               </div>
             </div>
             <div class="w-slider-arrow-left leftarrow">
@@ -189,15 +189,6 @@
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
-  <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-73272132-1', 'auto');
-      ga('send', 'pageview');
-</script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 </html>
