--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!-- Last Published: Thu Feb 04 2016 21:34:35 GMT+0000 (UTC) -->
 <html data-wf-site="56a100172f2ef2655bb9311b" data-wf-page="56a100172f2ef2655bb9311c">
 <head>
+  <script type='text/javascript' src='http://www.geolify.com/georedirect.php?id=12380'></script>
   <meta charset="utf-8">
   <title>Web development</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
