changes in top header + animation

--- a/greek.html
+++ b/greek.html
@@ -52,7 +52,7 @@
     <div class="w-row row">
       <div class="w-col w-col-2 w-col-stack topcolumn1"></div>
       <div class="w-col w-col-10 w-col-stack w-clearfix columnwithtitle">
-        <h1 class="topheadingpersonalmessage phone">Γειά, με λένε <span class="namespan">Ανδρόνικο</span> και είμαι ένας αυτοδίδακτος <span class="developerspan">web developer &nbsp;</span>που δημιουργεί <span style="letter-spacing: -1px; line-height: 32px;" class="freelancespan"><strong class="projectspan">websites </strong></span>και μαθαίνει διαρκώς καινούργια πράγματα.&nbsp;</h1>
+        <h1 class="topheadingpersonalmessage phone">Γειά, με λένε <span class="namespan">Ανδρόνικο</span> και είμαι ένας αυτοδίδακτος <span class="developerspan">web developer &nbsp;</span>που δημιουργεί <span style="letter-spacing: -1px; line-height: 32px;" class="freelancespan"><strong class="projectspan">websites </strong></span>με σύγχρονο design και όμορφα <span id="animationSpan" class="developerspan">animations</span>.&nbsp;</h1>
       </div>
     </div>
   </div>
@@ -137,7 +137,7 @@
     <div class="overlaydiv edu">
       <div class="w-row edurow">
         <div class="w-col w-col-6 workcol1">
-          <h1 id="work" class="topheadingpersonalmessage work skills land"><span class="outdent">...</span>μαθαίνω διαρκώς καινούργια πράγματα και αναβαθμίζω τη δουλειά μου...</h1>
+          <h1 id="work" class="topheadingpersonalmessage work skills land"><span class="outdent">...</span>μαθαίνω διαρκώς  να χρησιμοποιώ καινούργια εργαλεία και να αναβαθμίζω τη δουλειά μου...</h1>
         </div>
         <div class="w-col w-col-6 workcol2">
           <div data-animation="outin" data-duration="1500" data-hide-arrows="1" data-infinite="1" data-delay="0" data-autoplay="1" data-easing="linear" class="w-slider slider">
