--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Thu Feb 04 2016 21:34:35 GMT+0000 (UTC) -->
 <html data-wf-site="56a100172f2ef2655bb9311b" data-wf-page="56a100172f2ef2655bb9311c">
 <head>
   <script type='text/javascript' src='http://www.geolify.com/georedirect.php?id=12380'></script>
@@ -52,7 +50,7 @@
     <div class="w-row row">
       <div class="w-col w-col-2 w-col-stack topcolumn1"></div>
       <div class="w-col w-col-10 w-col-stack w-clearfix columnwithtitle">
-        <h1 class="topheadingpersonalmessage phone home">Hi, my name is <span class="freelancespan">Nik </span>and i am a self taught&nbsp;<span class="developerspan">web developer </span>who loves building websites and learning new things. I'm available for&nbsp;<span class="freelancespan">freelance</span>&nbsp;work.</h1>
+        <h1 class="topheadingpersonalmessage phone home">Hi, my name is <span class="freelancespan">Nik </span>and i am a self taught&nbsp;<span class="developerspan">web developer </span>who loves building websites with modern design and pretty <span id="animationSpan" class="developerspan">animations</span>. I'm available for&nbsp;<span class="freelancespan">freelance</span>&nbsp;work.</h1>
       </div>
     </div>
   </div>
