--- a/greek.html
+++ b/greek.html
@@ -46,7 +46,7 @@
   <div id="topSection" class="w-section topsectionvideo"><a href="index.html" class="w-button englishbtn">English</a>
     <div class="w-embed video">
       <video muted="" autoplay="" loop="" style="width:100%; height:auto;  position:absolute; z-index: -1;">
-        <source src="http://dl.dropboxusercontent.com/s/https://www.dropbox.com/s/96l3y45tz42vdh2/shutterstock_v12448643.mp4?dl=0" type="video/mp4">
+        <source src="http://dl.dropboxusercontent.com/s/96l3y45tz42vdh2/shutterstock_v12448643.mp4?dl=0" type="video/mp4">
       </video>
     </div>
     <div class="w-row row">
