added redesigned logo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div class="w-section navsec">
-    <a href="#topSection" class="w-inline-block logolinkblock"><img width="156" src="images/1_1.png" class="logoimg">
+    <a href="#topSection" class="w-inline-block logolinkblock"><img width="156" src="images/2.svg" class="logoimg">
     </a>
     <div class="w-container navcon"><a href="#workSec" data-ix="navtrigger-4" class="navbarlink contact work">My work</a><a href="#contactSSec" data-ix="navtrigger-5" class="navbarlink contact con">Contact</a><a href="#education" data-ix="navtrigger-6" class="navbarlink contact tools">Skills &amp; tools</a>
     </div>
