added redesigned logo in greek page

--- a/greek.html
+++ b/greek.html
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div class="w-section navsec">
-    <a href="#topSection" class="w-inline-block logolinkblock"><img width="156" src="images/1.png" class="logoimg">
+    <a href="#topSection" class="w-inline-block logolinkblock"><img width="156" src="images/2.svg" class="logoimg">
     </a>
     <div class="w-container navcon"><a href="#workSec" data-ix="navtrigger-4" class="navbarlink greek work">H δουλειά μου</a><a href="#contact" data-ix="navtrigger-5" class="navbarlink contact greek">Επικοινωνία</a><a href="#education" data-ix="navtrigger-6" class="navbarlink contact greek tools">Γνώσεις &amp; εργαλεία</a>
     </div>
