added social media links

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     </a>
     <div class="w-container navcon"><a href="#workSec" data-ix="navtrigger-4" class="navbarlink contact work">My work</a><a href="#contactSSec" data-ix="navtrigger-5" class="navbarlink contact con">Contact</a><a href="#education" data-ix="navtrigger-6" class="navbarlink contact tools">Skills &amp; tools</a>
     </div>
+    <div class="socialIcons">
+        <a href="https://gr.linkedin.com/in/nik-ches-149721124"><img class="linkedinIcon" src="images/1468790614_LinkedIn-logo-vector.svg" alt=""></a>
+        <a href="https://github.com/Nik-Ches"><img class="githubIcon" src="images/1468790961_logo-github.svg" alt=""></a>
+    </div>
   </div>
   <div id="topSection" class="w-section topsectionvideo"><a href="greek.html" class="w-button greekbtn">Ελληνικά</a>
     <div class="w-embed video">
