--- a/greek.html
+++ b/greek.html
@@ -42,6 +42,10 @@
     </a>
     <div class="w-container navcon"><a href="#workSec" data-ix="navtrigger-4" class="navbarlink greek work">H δουλειά μου</a><a href="#contact" data-ix="navtrigger-5" class="navbarlink contact greek">Επικοινωνία</a><a href="#education" data-ix="navtrigger-6" class="navbarlink contact greek tools">Γνώσεις &amp; εργαλεία</a>
     </div>
+    <div class="socialIcons">
+        <a href="https://gr.linkedin.com/in/nik-ches-149721124"><img class="linkedinIcon" src="images/1468790614_LinkedIn-logo-vector.svg" alt=""></a>
+        <a href="https://github.com/Nik-Ches"><img class="githubIcon" src="images/1468790961_logo-github.svg" alt=""></a>
+    </div>
   </div>
   <div id="topSection" class="w-section topsectionvideo"><a href="index.html" class="w-button englishbtn">English</a>
     <div class="w-embed video">
